bug fixes and user display

--- a/treasue hunt/treasurehunt.html
+++ b/treasue hunt/treasurehunt.html
@@ -6,13 +6,13 @@
 	<link rel="stylesheet" type="text/css" href="treasurehunt.css">
 </head>
 <body class="container">
-	<h2>Treasure Hunt</h2>
-	<h3>use arrow keys or (u,d,l,r) to move the player</h3>
-	<h4>collect all the treasures to win and use the swords to kill the monsters, if you don't have a sword you can use a potion to recover and if you don't have either of them</h4>
-	<h3>YOU DIE!</h3>
+	<h3>Treasure Hunt</h3>
+	<h4>Use the arrows key (or u, d, l, r) to move your avatar.</h4>
+	<h4>Collect all the treasures to win! Beware of monsters that will try to stop you from collecting your treasure. You can use swords to vanquish them or use potions to recover any damage sustained from them but it'll be game over if you run out!</h4>
 	<p id="demo"></p>
 	<p id="demo1"></p>
 	<p id="demo2"></p>
+	<button><a href="treasurehunt.html"</a>Replay</button>
 	<script type="text/javascript" src="treasurehunt.js"></script>
 </body>
 </html>
